05-persistent-v-kubernates/namespaces.yaml
# Namespace for application tier (Mongo-Express)
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-namespace
  labels:
    tier: application

---
# Namespace for database tier (MongoDB)
apiVersion: v1
kind: Namespace
metadata:
  name: database-namespace
  labels:
    tier: database
