05-persistent-v-kubernates/ingress.yaml
# Ingress for routing external traffic to Mongo-Express
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: app-namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mongo.local
      secretName: mongo-tls-secret
  rules:
  - host: mongo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-express-service
            port:
              number: 8081
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: mongodb-express-service
            port:
              number: 8081
